# wadi

./: LICENSE  dune-project  wadi.opam
lib/: dune  wadi.ml
lib/desugar/: core_ast.ml  dune
lib/eval/: dune  eval.ml  pattern.ml  value.ml
lib/parsing/: ast.ml  ast.mli  dune  lexer.mll  location.ml  location.mli  parser.mly  parsing.ml  parsing.mli
test/: dune  test_eval.ml  test_wadi.ml
